--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit&family=Space+Mono&display=swap" rel="stylesheet"> 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="stylesheet" href="style.css"/>
   
   <title>Frontend Mentor | QR code component</title>
@@ -16,7 +16,7 @@
 </head>
 <body>
   <div id="card">
-  <img id="qr" src="images/image-qr-code.png" alt="qr code able to scan"  />
+  <img id="qr" src="image-qr-code.png" alt="qr code able to scan"  />
     <h1>
   Improve your front-end skills by building projects
    </h1>
